--- a/scss/sections/main/_projects.scss
+++ b/scss/sections/main/_projects.scss
@@ -30,7 +30,7 @@ hr.hr-projects{
 
     font-family: $roboto-font;
     height: auto;
-    color: $main-text-color;
+    color: $main-secondary-color;
     margin-bottom: 50px;
 
     ul.gallery {
@@ -44,7 +44,7 @@ hr.hr-projects{
 
         .item{
           width: 90%;
-          height: 330px;
+          height: 400px;
           background-color: $main-primary-color;
           margin: 0 auto 10% auto;
           @include border-radius(5px);
@@ -55,18 +55,22 @@ hr.hr-projects{
 
           @include selection($main-secondary-color, white);
 
-          img{
-            width: 100%;
-            height: 55%;
-            @include border-top-radius(5px);
-          }
-
+          
           .title{
-            font-weight: 900;
-            font-size: 18px;
-            padding-left: 10px;
-            margin-top: 15px;
-            color: #333;
+            font-size: 20px;
+            color: #000;
+            margin: 0;
+            padding: 10px;
+            position: relative;
+            width: 100%;
+            margin-top: 10px;
+
+            i.title-icon{
+              margin-right: 10px;
+              font-size: 30px;
+              vertical-align: middle;
+              color: $main-secondary-color;
+            }
           }
 
           .text{
@@ -74,36 +78,69 @@ hr.hr-projects{
             font-size: 15px;
             padding-left: 10px;
             padding-right: 10px;
-            margin-top: 15px;
-            color: #999;
+            margin-top: 5px;
+            color: red;
           }
+          .body{
+            padding: 0 10px 10px 10px;
+            text-align: left;
 
-          i.open-project{
-            position: absolute;
-            top: calc((50%) + 33px);
-            right: 15px;
-            font-size: 20px;
-            color: #949393;
-            cursor: pointer;
-
-            &:hover{
-              color: darken(#949393, 20%)
+            a{
+              text-decoration: underline;
             }
 
-            @include keyframes(move-up-down) {
-              0% {
-                transform: translateY(0);
-              }
-              50% {
-                transform: translateY(15%);
-              }
-              100% {
-                transform: translateY(0);
-              }
+            p{
+              color: #666;
+              line-height: 22px;
+              width: 100%;
+              font-weight: normal;
+              font-size: 15px;
             }
 
-            animation: move-up-down 1.5s linear infinite;
+            ul{
+              list-style: none;
+              padding: 0;
+              margin: 0;
+              float: none;
+              width: 100%;
+
+              li{
+                clear: both;
+                float: none;
+                width: 100%;
+                color: #666;
+                margin-bottom: 10px;
+
+                .number{
+                  width: 25px;
+                  background-color: $main-secondary-color;
+                  height: 25px;
+                  @include border-radius(50%);
+                  float: left;
+                  color: #fff;
+                  text-align: center;
+                  line-height: 25px;
+                  font-size: 18px;
+                }
+
+                .task-item-text{
+                  float: left;
+                  line-height: 20px;
+                  width: calc(100% - 30px);
+                  font-size: 15px;
+                  margin-left: 5px;
+                  padding-left: 5px;
+                  text-align: left;
+                }
+
+                .clear{
+                  clear: both;
+                }
+              }
+            }
           }
+
+          
 
         }
 
@@ -117,27 +154,10 @@ hr.hr-projects{
 
         @include breakpoint($desktop) {
 
-          @include span(4 of 12);
+          @include span(6 of 12);
 
-          &:nth-of-type(3n+2){
-            text-align: center;
-            .item{
-              margin: 0 auto 10% auto;
-            }
-          }
 
-          &:nth-of-type(3n+1){
-            .item{
-              left: 0;
-            }
-          }
-
-          &:nth-of-type(3n+3){
-            text-align: right;
-            .item{
-              margin-right: 2px;
-            }
-          }
+          
 
         }
 
