--- a/scss/sections/main/_projects.scss
+++ b/scss/sections/main/_projects.scss
@@ -71,6 +71,12 @@ hr.hr-projects{
               vertical-align: middle;
               color: $main-secondary-color;
             }
+            i.title-icon2{
+              margin-left: 1px;
+              font-size: 10px;
+              vertical-align: middle;
+              color: $main-secondary-color;
+            }
           }
 
           .text{
@@ -131,6 +137,12 @@ hr.hr-projects{
                   margin-left: 5px;
                   padding-left: 5px;
                   text-align: left;
+
+                  .task-item-highlight{
+                    color: red;
+                    font-size: 15px;
+                    font-weight: bold;
+                  }
                 }
 
                 .clear{
