--- a/scss/sections/main/_projects.scss
+++ b/scss/sections/main/_projects.scss
@@ -73,9 +73,9 @@ hr.hr-projects{
             }
             i.title-icon2{
               margin-left: 1px;
-              font-size: 10px;
+              font-size: 15px;
               vertical-align: middle;
-              color: $main-secondary-color;
+              color: black;
             }
           }
 
